platforms/android/app/src/main/cpp/3rdparty/libjpeg-turbo/jna/TJ.java


  // --------------------------------------------------------------------------

  public static native int tj3DecompressHeader(Pointer handle, Pointer jpegBuf,
                                               NativeLong jpegSize);

  public static void decompressHeader(Pointer handle, Pointer jpegBuf,
                                      NativeLong jpegSize) throws Exception {
    if (tj3DecompressHeader(handle, jpegBuf, jpegSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3GetICCProfile(Pointer handle,
                                            PointerByReference iccBuf,
                                            NativeLongByReference iccSize);

  public static void getICCProfile(Pointer handle, PointerByReference iccBuf,
                                   NativeLongByReference iccSize)
                                   throws Exception {
    if (tj3GetICCProfile(handle, iccBuf, iccSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native ScalingFactor
    tj3GetScalingFactors(IntByReference numScalingFactors);

  public static ScalingFactor[]
    getScalingFactors(IntByReference numScalingFactors) throws Exception {
    ScalingFactor retval = tj3GetScalingFactors(numScalingFactors);
    if (retval == null)
      throw new Exception(tj3GetErrorStr(null), tj3GetErrorCode(null));
    if (numScalingFactors != null && numScalingFactors.getValue() > 0)
      return (ScalingFactor[])retval.toArray(numScalingFactors.getValue());
    return null;
  }

  // --------------------------------------------------------------------------

  public static native int
    tj3SetScalingFactor(Pointer handle, ScalingFactor.ByValue scalingFactor);

  public static void setScalingFactor(Pointer handle,
                                      ScalingFactor scalingFactor)
                                      throws Exception {
    ScalingFactor.ByValue sf =
      (scalingFactor instanceof ScalingFactor.ByValue ?
       (ScalingFactor.ByValue)scalingFactor :
       new ScalingFactor.ByValue(scalingFactor));
    if (tj3SetScalingFactor(handle, sf) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3SetCroppingRegion(Pointer handle,
                                                Region.ByValue croppingRegion);

  public static void setCroppingRegion(Pointer handle, Region croppingRegion)
                                       throws Exception {
    Region.ByValue cr =
      (croppingRegion instanceof Region.ByValue ?
       (Region.ByValue)croppingRegion : new Region.ByValue(croppingRegion));
    if (tj3SetCroppingRegion(handle, cr) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Decompress8(Pointer handle, Pointer jpegBuf,
                                          NativeLong jpegSize, Pointer dstBuf,
                                          int pitch, int pixelFormat);

  public static void decompress8(Pointer handle, Pointer jpegBuf,
                                 NativeLong jpegSize, Pointer dstBuf,
                                 int pitch, int pixelFormat) throws Exception {
    if (tj3Decompress8(handle, jpegBuf, jpegSize, dstBuf, pitch,
                       pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Decompress12(Pointer handle, Pointer jpegBuf,
                                           NativeLong jpegSize, Pointer dstBuf,
                                           int pitch, int pixelFormat);

  public static void decompress12(Pointer handle, Pointer jpegBuf,
                                  NativeLong jpegSize, Pointer dstBuf,
                                  int pitch, int pixelFormat)
                                  throws Exception {
    if (tj3Decompress12(handle, jpegBuf, jpegSize, dstBuf, pitch,
                        pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Decompress16(Pointer handle, Pointer jpegBuf,
                                           NativeLong jpegSize, Pointer dstBuf,
                                           int pitch, int pixelFormat);

  public static void decompress16(Pointer handle, Pointer jpegBuf,
                                  NativeLong jpegSize, Pointer dstBuf,
                                  int pitch, int pixelFormat)
                                  throws Exception {
    if (tj3Decompress16(handle, jpegBuf, jpegSize, dstBuf, pitch,
                        pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int
    tj3DecompressToYUVPlanes8(Pointer handle, Pointer jpegBuf,
                              NativeLong jpegSize, PointerReference dstPlanes,
                              int[] strides);

  public static void decompressToYUVPlanes8(Pointer handle, Pointer jpegBuf,
                                            NativeLong jpegSize,
                                            PointerReference[] dstPlanes,
                                            int[] strides) throws Exception {
    if (tj3DecompressToYUVPlanes8(handle, jpegBuf, jpegSize, dstPlanes[0],
                                  strides) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3DecompressToYUV8(Pointer handle,
                                               Pointer jpegBuf,
                                               NativeLong jpegSize,
                                               Pointer dstBuf, int align);

  public static void decompressToYUV8(Pointer handle, Pointer jpegBuf,
                                      NativeLong jpegSize, Pointer dstBuf,
                                      int align) throws Exception {
    if (tj3DecompressToYUV8(handle, jpegBuf, jpegSize, dstBuf, align) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3DecodeYUVPlanes8(Pointer handle,
                                               PointerReference srcPlanes,
                                               int[] strides, Pointer dstBuf,
                                               int width, int pitch,
                                               int height, int pixelFormat);

  public static void decodeYUVPlanes8(Pointer handle,
                                      PointerReference[] srcPlanes,
                                      int[] strides, Pointer dstBuf, int width,
                                      int pitch, int height, int pixelFormat)
                                      throws Exception {
    if (tj3DecodeYUVPlanes8(handle, srcPlanes[0], strides, dstBuf, width,
                            pitch, height, pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3DecodeYUV8(Pointer handle, Pointer srcBuf,
                                         int align, Pointer dstBuf, int width,
                                         int pitch, int height,
                                         int pixelFormat);

  public static void decodeYUV8(Pointer handle, Pointer srcBuf, int align,
                                Pointer dstBuf, int width, int pitch,
                                int height, int pixelFormat) throws Exception {
    if (tj3DecodeYUV8(handle, srcBuf, align, dstBuf, width, pitch, height,
                      pixelFormat) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native NativeLong
    tj3TransformBufSize(Pointer handle, Transform.ByValue transform);

  public static NativeLong transformBufSize(Pointer handle,
                                            Transform transform)
                                            throws Exception {
    Transform.ByValue t =
      (transform instanceof Transform.ByValue ?
       (Transform.ByValue)transform : new Transform.ByValue(transform));
    NativeLong retval = tj3TransformBufSize(handle, t);
    if (retval.longValue() == 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native int tj3Transform(Pointer handle, Pointer jpegBuf,
                                        NativeLong jpegSize, int n,
                                        PointerReference dstBufs,
                                        NativeLongReference dstSizes,
                                        Transform transforms);

  public static void transform(Pointer handle, Pointer jpegBuf,
                               NativeLong jpegSize, int n,
                               PointerReference[] dstBufs,
                               NativeLongReference[] dstSizes,
                               Transform[] transforms) throws Exception {
    if (tj3Transform(handle, jpegBuf, jpegSize, n, dstBufs[0], dstSizes[0],
                     transforms[0]) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native Pointer tj3LoadImage8(Pointer handle, String filename,
                                             IntByReference width, int align,
                                             IntByReference height,
                                             IntByReference pixelFormat);

  public static Pointer loadImage8(Pointer handle, String filename,
                                   IntByReference width, int align,
                                   IntByReference height,
                                   IntByReference pixelFormat)
                                   throws Exception {
    Pointer retval = tj3LoadImage8(handle, filename, width, align, height,
                                   pixelFormat);
    if (retval == null)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native Pointer tj3LoadImage12(Pointer handle, String filename,
                                              IntByReference width, int align,
                                              IntByReference height,
                                              IntByReference pixelFormat);
